--- a/manifest.json
+++ b/manifest.json
@@ -2,8 +2,10 @@
   "manifest_version": 2,
  
   "name": "Ghosted",
-  "description": "Hide annoying commenters on Facebook without blocking them",
+  "description": "Hide annoying people on Facebook.",
+  "author": "Andrew Theroux",
   "version": "1.0",
+  "homepage_url": "https://github.com/theroux/ghosted",
   "icons": { "16": "icons/icon16.png",
            "48": "icons/icon48.png",
           "128": "icons/icon128.png" 
