--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,10 @@
 {
   "manifest_version": 2,
  
-  "name": "Ghosted",
-  "description": "Hide annoying people on Facebook.",
-  "author": "Andrew Theroux",
+  "name": "Ghosted: Hide Annoying People on Facebook",
+  "short_name": "Ghosted",
+  "description": "Makes annoying people vanish.",
+  "author": "Andrew Theroux, Brandon Hunter",
   "version": "1.1",
   "homepage_url": "https://github.com/theroux/ghosted",
   "icons": { "16": "icons/icon16.png",
